# python_practice_flash_card_mand_to_en

./: README.md  main.py  pyproject.toml  source_excel.xlsx
data/: mandarin_english_spanish_words.csv  words_to_learn.csv
