[tool.poetry]
name = "python-practice-flash-card-app-capstone"
version = "0.1.0"
description = ""
authors = ["Mei Zhang <rubymxzhang@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
pyperclip = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
